force-app/main/default/objects/Marketo_Activity__c/Marketo_Activity__c.object-meta.xml
<CustomObject>
    <description>To store marketo prospect activity, so it can be imported in to Pardot using api</description>
    <label>Marketo Activity</label>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Marketo Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketo Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>