force-app/main/default/objects/Marketo_Activity__c/fields/activityDate__c.field-meta.xml
<CustomField>
    <fullName>activityDate__c</fullName>
    <description>date and time of activity</description>
    <label>activityDate</label>
    <type>DateTime</type>
</CustomField>