force-app/main/default/objects/Marketo_Activity__c/fields/activityTypeId__c.field-meta.xml
<CustomField>
    <fullName>activityTypeId__c</fullName>
    <description>determines what type of activity occured</description>
    <label>activityTypeId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>