force-app/main/default/objects/Marketo_Activity__c/fields/attributes__c.field-meta.xml
<CustomField>
    <fullName>attributes__c</fullName>
    <description>additional attributes for the activity</description>
    <label>attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>