force-app/main/default/objects/Marketo_Activity__c/fields/campaignId__c.field-meta.xml
<CustomField>
    <fullName>campaignId__c</fullName>
    <description>which campaign (if any) the activity is attributed to</description>
    <label>campaignId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>