force-app/main/default/objects/Marketo_Activity__c/fields/leadId__c.field-meta.xml
<CustomField>
    <fullName>leadId__c</fullName>
    <description>marketo leadId</description>
    <label>leadId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>