force-app/main/default/objects/Marketo_Activity__c/fields/marketoGUID__c.field-meta.xml
<CustomField>
    <fullName>marketoGUID__c</fullName>
    <description>stores marketoGUID from data import</description>
    <label>marketoGUID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>