force-app/main/default/objects/Marketo_Activity__c/fields/primaryAttributeValue__c.field-meta.xml
<CustomField>
    <fullName>primaryAttributeValue__c</fullName>
    <description>primaryAttributeValue (website URL, campaign source, etc)</description>
    <label>primaryAttributeValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>