force-app/main/default/objects/Marketo_Activity__c/fields/primaryAttributeValueId__c.field-meta.xml
<CustomField>
    <fullName>primaryAttributeValueId__c</fullName>
    <description>The id of the primaryAttributeValue</description>
    <label>primaryAttributeValueId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>